# sample-python-lib

./: README.md  pyproject.toml
src/sample_python_lib/: __init__.py  greet.py  hello.py
tests/: test_hello.py
